--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.12",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
